...
    fontFamily: FontFamily,
    onOrderChange: (NoteOrder) -> Unit
) {
    Column(modifier = modifier) {
        Row(modifier = Modifier.fillMaxWidth()) {
            DefaultRadioButton(
                text = "Title",
                selected = noteOrder is NoteOrder.Title,
                fontFamily = fontFamily,
                onSelect = {
                    onOrderChange(NoteOrder.Title(noteOrder.orderType))
                },
            )
...
                onSelect = {
                    onOrderChange(noteOrder.copy(OrderType.Ascending))
                }
            )
            Spacer(modifier = Modifier.width(12.dp))
            DefaultRadioButton(
                text = "Descending",
                selected = noteOrder.orderType is OrderType.Descending,
                fontFamily = fontFamily,
                onSelect = {
                    onOrderChange(noteOrder.copy(OrderType.Descending))
                }
            )
...
